Fixed a width issue on newly changed JS for navigation-wrap

--- a/css/style.css
+++ b/css/style.css
@@ -3014,7 +3014,7 @@ a.icon-checkmark:hover {
     position: absolute;
     top: 0;
     left: 0;
-    width: 0;
+    width: 80%;
     display: none;
     background-color: rgba(255, 255, 255, 0.85);
     z-index: 10;
