--- a/sass/components/_menus.scss
+++ b/sass/components/_menus.scss
@@ -261,7 +261,7 @@
       position: absolute;
       top: 0;
       left: 0;
-      width: 0;
+      width: 80%;
       display: none;
       background-color: rgba($white, 0.85);
       z-index: 10;
